macos: add python.framework lib to search paths

BUG:464464
(cherry picked from commit 0317674f64a539337dafa2ed9daaafcf3f825b22)